Bug 432637 - System monitor disk throughput shows wrong numbers
Summary: System monitor disk throughput shows wrong numbers
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 427843 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-08 12:15 UTC by Schlaefer
Modified: 2021-02-09 11:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
disks wrong throughput (377.35 KB, image/png)
2021-02-08 12:15 UTC, Schlaefer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Schlaefer 2021-02-08 12:15:46 UTC
Created attachment 135503 [details]
disks wrong throughput

SUMMARY

Disk throughput B/s not shown correctly in System Monitor

STEPS TO REPRODUCE
1. Create a new line chart in System Monitor
2. Data Ranges set to "Automatic Y Data Range"
2. Add Sensors -> Disks -> <a disk> -> Write Rate (B/s) or Read Rate (B/s)

OBSERVED RESULT

The shown throughput values (text values, y-scale) do not reflect the actual disk throughput.

EXPECTED RESULT

The values should be correct.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 5.20.90
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel Version: 5.10.13-zen1-2-zen

ADDITIONAL INFORMATION

In the attached picture you see:

- Left: The old System Monitor using template [1] showing the correct numbers
- Right: The new System Monitor 
- Bottom: iotop for reference

[1] https://store.kde.org/p/1257867
Comment 1 Bug Janitor Service 2021-02-08 13:56:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/ksysguard/-/merge_requests/66
Comment 2 David Redondo 2021-02-08 14:18:08 UTC
Git commit 34705df7a9d5d38f61e51f3a9dc4c3c9883d4b8f by David Redondo.
Committed on 08/02/2021 at 14:09.
Pushed by davidre into branch 'master'.

Fix disk speeds

Classical case of off-by-one. The documentation starts numbering at one.
I used the numbers from it instead of the proper ones.

M  +11   -11   plugins/global/disks/disks.cpp

https://invent.kde.org/plasma/ksysguard/commit/34705df7a9d5d38f61e51f3a9dc4c3c9883d4b8f
Comment 3 David Redondo 2021-02-08 14:30:38 UTC
Git commit fbefa252c7faafe33b3c4969369722db23af08be by David Redondo.
Committed on 08/02/2021 at 14:30.
Pushed by davidre into branch 'Plasma/5.21'.

Fix disk speeds

Classical case of off-by-one. The documentation starts numbering at one.
I used the numbers from it instead of the proper ones.


(cherry picked from commit 34705df7a9d5d38f61e51f3a9dc4c3c9883d4b8f)

M  +11   -11   plugins/global/disks/disks.cpp

https://invent.kde.org/plasma/ksysguard/commit/fbefa252c7faafe33b3c4969369722db23af08be
Comment 4 David Redondo 2021-02-09 11:17:18 UTC
*** Bug 427843 has been marked as a duplicate of this bug. ***