Fix disk speeds

Classical case of off-by-one. The documentation starts numbering at one.
I used the numbers from it instead of the proper ones.
BUG:432637